Добавил checkbox для schedule

--- a/src/pug/sections/_study-work.pug
+++ b/src/pug/sections/_study-work.pug
@@ -1,6 +1,6 @@
 mixin table
     table.table-scroll
-        thead
+        thead.table-scroll__header
             tr
                 th.table-scroll__title Наименование учебной дисциплины
                 th.table-scroll__title Учебный год
