Начал собирать покомпонентно Dashboard, Нужно вынести компоненты в компоненты

--- a/src/pug/sections/_parent-cabinet-container.pug
+++ b/src/pug/sections/_parent-cabinet-container.pug
@@ -153,7 +153,7 @@ section.parent-cabinet
                     button(data-id="visits").parent-cabinet__button.btn.btn--light Посещения
                         svg(width="36" height="36")
                             use(href="#clock")
-                include ./parent-cabinet-tabs
+                include _parent-cabinet-tabs
 
             include ./_advertisement-content
         aside.parent-cabinet__aside
