--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -74,3 +74,11 @@
 //parent-cabinet
 @import "blocks/parent-cabinet";
 @import "blocks/finance";
+@import "blocks/schedule";
+@import "blocks/calendar";
+
+//moderator
+@import "blocks/moderator";
+
+//dashboard
+@import "blocks/dashboard";
