--- a/src/scss/general/mixes.scss
+++ b/src/scss/general/mixes.scss
@@ -4,6 +4,10 @@
   width: 100%;
   max-width: 1440px;
   border-radius: 4px;
+  &--aside {
+    gap: 30px;
+    display: flex;
+  }
 
   @media (min-width: $stop-scaling) {
 	padding: 0 40px;
