Додумать range на %

--- a/src/pug/sections/_announcement.pug
+++ b/src/pug/sections/_announcement.pug
@@ -1,5 +1,5 @@
 section.announcement
-    .announcement__container.container
+    .announcement__container
         .announcement__wrapper
             p.announcement__text
                 | ⚡️ Объявлен прием заявлений на заселение в общежития. Успей подать заявление в 
