--- a/src/pug/sections/_services.pug
+++ b/src/pug/sections/_services.pug
@@ -1,20 +1,32 @@
 section.services
-    .services__container.container
+    .services__container.swiper-container
         .services__header
             h2.services__title.title--main Популярные услуги
             span.divider
-        .services__slider.swiper-container
-            .services__wrapper.swiper-wrapper
-                .service.swiper-slide
-                    h3.service__name Справка об обучении
-                    p.service__deadline Срок готовности 3 дня
-                .service.swiper-slide
-                    h3.service__name Справка об обучении
-                    p.service__deadline Срок готовности 3 дня
-                .service.swiper-slide
-                    h3.service__name Справка об обучении
-                    p.service__deadline Срок готовности 3 дня
-            .services__navigation
-                .swiper-button-prev
-                .services__pagination.swiper-pagination
-                .swiper-button-next
+            .services__navigation.services__navigation--desktop
+                .swiper-button-prev.services-button-prev
+                .swiper-pagination.services-pagination
+                .swiper-button-next.services-button-next
+        .services__slider.swiper-wrapper
+            .service.swiper-slide
+                h3.service__name Справка об обучении
+                p.service__deadline Срок готовности 3 дня
+            .service.swiper-slide
+                h3.service__name Справка об обучении
+                p.service__deadline Срок готовности 3 дня
+            .service.swiper-slide
+                h3.service__name Справка об обучении
+                p.service__deadline Срок готовности 3 дня
+            .service.swiper-slide
+                h3.service__name Справка об обучении
+                p.service__deadline Срок готовности 3 дня
+            .service.swiper-slide
+                h3.service__name Справка об обучении
+                p.service__deadline Срок готовности 3 дня
+            .service.swiper-slide
+                h3.service__name Справка об обучении
+                p.service__deadline Срок готовности 3 дня
+        .services__navigation
+            .swiper-button-prev.services-button-prev
+            .services__pagination.swiper-pagination.services-pagination
+            .swiper-button-next.services-button-next
