--- a/src/scss/blocks/_announcement.scss
+++ b/src/scss/blocks/_announcement.scss
@@ -1,5 +1,8 @@
 .announcement {
-  margin-bottom: 47px;
+  margin-bottom: 43px;
+  background: #fff;
+  border-radius: 4px;
+  width: 100%;
 }
 
 .announcement__wrapper {
@@ -7,7 +10,7 @@
 }
 
 .announcement__text {
-  padding: 19px 14px 25px 15px;
+  padding: 22px 14px 22px 23px;
   font-size: 18px;
   line-height: 26px;
   margin: 0;
