--- a/src/scss/blocks/_block-content.scss
+++ b/src/scss/blocks/_block-content.scss
@@ -39,9 +39,12 @@
     display: flex;
     width: 100%;
     height: 21%;
+    position: absolute;
+    bottom: 95px;
     @media (min-width: $tablet) {
       flex-direction: column;
       align-items: flex-end;
+      position: static;
     }
   }
   &--hot {
@@ -64,6 +67,7 @@
   background: #3464e0;
   box-sizing: border-box;
   overflow: hidden;
+  width: 100%;
   @media (min-width: $mobile) {
     width: 545px;
   }
