Доделал range, начал делать Job - сделать миксин для ссылок

--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,6 +1,6 @@
 header.page-header.js-header
     .overlay#overlay-modal
-    .page-header__wrapper
+    .page-header__wrapper.container
         .page-header__sidebar
             button.page-header__sidebar-toggler
                 span.toggler-element
