--- a/src/scss/blocks/_vacancy.scss
+++ b/src/scss/blocks/_vacancy.scss
@@ -7,12 +7,13 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 31px;
+  flex-wrap: wrap;
 }
 
 .vacancy__question {
   font-size: rem-calc(14);
   line-height: 21px;
-  color: #3464E0;
+  color: #3464e0;
 }
 
 .vacancy__section {
@@ -27,14 +28,14 @@
   &--hot {
     color: $c-red;
     &::before {
-      content: '⚡';
+      content: "⚡";
       padding-right: 11px;
     }
   }
 }
 
 .vacancy-container {
-  border-top: 1px solid #E4ECFA;
+  border-top: 1px solid #e4ecfa;
   padding-top: 24px;
   padding-left: 20px;
   height: 720px;
@@ -60,7 +61,7 @@
   font-size: rem-calc(16);
   line-height: 26px;
   &::before {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     width: 20px;
@@ -78,7 +79,7 @@
   margin-bottom: 25px;
   padding-top: 27px;
   margin-right: 28px;
-  border-top: 1px solid #E4ECFA;
+  border-top: 1px solid #e4ecfa;
 }
 
 .vacancy__salary-item {
@@ -95,5 +96,93 @@
 .vacancy__wrapper {
   @media (min-width: $tablet) {
     width: 1006px;
+  }
+}
+
+.vacancy__filter-button {
+  position: relative;
+  padding-left: 62px;
+  transition: 0.5s;
+  margin-bottom: 20px;
+  svg {
+    position: absolute;
+    left: 28px;
+    top: 10px;
+    width: 22px;
+    height: 22px;
+    fill: $c-blue;
+  }
+  &:hover {
+    svg {
+      fill: $c-light;
+    }
+  }
+  &--active {
+    background: $c-blue;
+    color: $c-light;
+    svg {
+      display: none;
+    }
+    &::after,
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 25px;
+      height: 1px;
+      background: #fff;
+      left: 28px;
+      top: 50%;
+      z-index: 2;
+    }
+    &::after {
+      transform: rotate(45deg);
+      animation: rotateToX 0.5s ease-in-out;
+    }
+    &::before {
+      transform: rotate(-45deg);
+      animation: rotateToY 0.5s ease-in-out;
+    }
+  }
+}
+
+.dashboard__vacancy {
+  .vacancy__filter {
+    width: 100%;
+    display: flex;
+    background-color: $c-light;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 25px;
+    justify-content: space-between;
+  }
+  .filter__label {
+    padding-left: 36px;
+  }
+  .filter__select {
+    width: 200px;
+  }
+  .filter__education-options {
+    width: 214px;
+  }
+  .filter__salary {
+    width: 240px;
+  }
+}
+
+@keyframes rotateToX {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(45deg);
+  }
+}
+@keyframes rotateToY {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(-45deg);
   }
 }
